fix spacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -119,3 +119,10 @@ body {
 select:hover {
   cursor: pointer;
 }
+
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  #globe_container {
+    margin-top: 75px;
+  }
+}
